# ex4

./: .gitignore  AStar.hpp  BFS.cpp  BFS.hpp  BestFS.cpp  BestFS.hpp  CMakeLists.txt  ClientHandlar.hpp  ClientHandler.hpp  DFS.cpp  DFS.hpp  Graph.cpp  Graph.hpp  GraphSolver.cpp  GraphSolver.hpp  MyClientHandler.cpp  MyClientHandler.hpp  MyParallelServer.cpp  MyParallelServer.hpp  MySerialServer.cpp  MySerialServer.hpp  README.md  Readme.md  Searchable.hpp  Searcher.hpp  Server.hpp  Solution.cpp  Solution.hpp  Solver.hpp  State.cpp  State.hpp  TestBestFsAlgo.cpp  details.txt  main.cpp  server.cpp  server.hpp  solver.hpp
src/: AStar.cpp  AStar.hpp  BFS.cpp  BFS.hpp  BestFS.cpp  BestFS.hpp  CMakeLists.txt  ClientHandler.hpp  DFS.cpp  DFS.hpp  ErrorCode.h  Experiment.cpp  Graph.cpp  Graph.hpp  GraphSolver.cpp  GraphSolver.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  MessageException.cpp  MessageException.hpp  MyClientHandler.cpp  MyClientHandler.hpp  MyParallelServer.cpp  MyParallelServer.hpp  MySerialServer.cpp  MySerialServer.hpp  SearchAlgorithm.hpp  Server.hpp  Solver.hpp  State.cpp  State.hpp  TestAlgo.cpp  file_reading.cpp  file_reading.hpp  main.cpp  output1.csv  output1.txt  output3.csv
